# ai-hero

./: .gitignore  README.md  app.py  build_index.py  pyproject.toml  rate_limit_state.json  requirements.txt
app/: ingest.py  logs.py  main.py  pyproject.toml
data/: ms_ai_agents_index.pkl
logs/: Repo_Assistant_v2_20251013_172018_788604.json  Repo_Assistant_v2_20251013_175311_983c3b.json  Repo_Assistant_v2_20251013_175423_fa7554.json  Repo_Assistant_v2_20251013_185704_87d8ea.json  Repo_Assistant_v2_20251013_185801_cc8e8a.json  Repo_Assistant_v2_20251013_185821_7e1fdc.json  Repo_Assistant_v2_20251015_000415_17f179.json  Repo_Assistant_v2_20251015_000453_df71c6.json  Repo_Assistant_v2_20251015_000930_066107.json  Repo_Assistant_v2_20251015_001423_ad6626.json  Repo_Assistant_v2_20251015_003944_ab0e1a.json
src/: search_agent.py  search_tools.py
