[project]
name = "ai-hero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.5",
    "minsearch>=0.0.5",
    "pydantic-ai>=1.0.10",
    "python-dotenv>=1.0.0",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
    "streamlit>=1.50.0"
]

[tool.uv.workspace]
members = [
    "app",
]
